--- a/proyectoWeb/proyectoWebApp/static/proyectoWebApp/css/gestion.css
+++ b/proyectoWeb/proyectoWebApp/static/proyectoWebApp/css/gestion.css
@@ -277,3 +277,13 @@ ul.errorlist{
   font-style: italic;
   color: red;
 }
+
+
+.contenedorContacto{
+  background-color: rgba(24, 64, 8, 0.8);
+  width: 50%;
+  margin: 15px auto;
+  border-radius: 10px;
+  padding: 1px 0px;
+
+}
