Se crea autentificacion

--- a/proyectoWeb/storeApp/templates/car/widget.html
+++ b/proyectoWeb/storeApp/templates/car/widget.html
@@ -21,7 +21,7 @@
                 <a href="{% url 'car:agregate' value.product_id %}" class="btn btn-success">+</a>
                 <a href="{% url 'car:substract' value.product_id %}" class="btn btn-success">-</a>
                 <br>
-                {{value.price}}
+                {{value.subtotal}}
             </td>
         </tr>
 
