--- a/proyectoWeb/proyectoWebApp/templates/proyectoWebApp/base.html
+++ b/proyectoWeb/proyectoWebApp/templates/proyectoWebApp/base.html
@@ -24,7 +24,13 @@
         <span class="site-heading-lower">Gestión de Pedidos</span>
       </h1>
 
-
+      <div style="color: aliceblue; text-align: right; margin-right: 100px;">
+        {% if user.is_authenticated %}
+        Hola {{user.username}} &nbsp;&nbsp; <a href="{% url 'close_session' %}">Cerrar sesión</a>
+        {% else %}
+        <a href="{% url 'login' %}">Registrate</a>
+        {% endif%}
+      </div>
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
