--- a/proyectoWeb/authentification/templates/auth.html
+++ b/proyectoWeb/authentification/templates/auth.html
@@ -8,25 +8,18 @@
     <div class="col-md-6">
       <form method="POST" action="">
         {% csrf_token %}
-
+        
         <div class="card">
           <div class="card-header">
-            <h3 class="text-center">Inicio de sesión</h3>
-            <!--Condicional para saber si hay un mensaje-->
-            {% if messages %}
-              {% for message in messages %}
-                {{message}}
-              {% endfor %}
-            {% endif %}
+            <h3 class="text-center">Formulario de Registro</h3>
           </div>
           <div class="card-body">
             {{ form|crispy }}
           </div>
           <div class="card-footer text-center">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary">Registrarse</button>
           </div>
         </div>
-
       </form>
     </div>
   </div>
