--- a/proyectoWeb/proyectoWebApp/templates/proyectoWebApp/base.html
+++ b/proyectoWeb/proyectoWebApp/templates/proyectoWebApp/base.html
@@ -28,9 +28,10 @@
         {% if user.is_authenticated %}
         Hola {{user.username}} &nbsp;&nbsp; <a href="{% url 'close_session' %}">Cerrar sesión</a>
         {% else %}
-        <a href="{% url 'login' %}">Registrate</a>
+        <a href="{% url 'login' %}">Iniciar Sesión</a>
+        <a href="{% url 'auth' %}">Registrate</a>
         {% endif%}
-      </div>
+      </div>   
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
